mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj/trg is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
[Dec 06 2010] - Jamdog
  Added new mail system, with inbox OLC, index rebuilder and first mail (to ID 1)
[Dec 05 2010] - Jamdog
  Bug-Fix: 'Did you mean' now only shows commands you have access to (thanks Welcor)
  Bug-Fix: Fixed crash bug introduced by new house system when saving house contents
  Scan command now tells you when nothing is nearby (thanks Mirad)
  zlist command can now list by builder, like show zones
  zlist command now uses page_string (thanks Mirad)
  areas command now uses page_string (thanks Mirad)
[Dec 02 2010] - Jamdog
  Bug-Fix: identify command in shops was listing incorrect buy price (thanks Kam)
  Added %actor.admlevel% and %actor.admlevel(<level>)% to dg-scripts
  Earthquake spell now misses flying people
[Dec 01 2010] - Jamdog
  Fixed do_cheat so that only ID 1 can get a full restoration
  Added zone checks for load/purge commands below admin level 3 (GrGod)
[Nov 30 2010] - Jamdog
  Bug-Fix: Fixed incorrect rnum showing on stat room <vnum> (Thanks Kam)
  Added hsedit House Editor OLC
[Nov 28 2010] - Jamdog
  Converted houses (lib/etc/hcontrol file) to ASCII file format
  Added hcontrol file converter (hstoascii.c) to src/utils folder
  Converted houses to work as linked lists, not wasteful fixed-size arrays
  Added GOD houses and player-owned shops as house types
  Added 'receptionist' and 'player-shopkeeper' type spec-procs for houses
[Nov 26 2010] - Jamdog
  Bug-Fix: set level now allows GRGOD or higher to set to any mortal level
  Advance command changed to work for both mortal and admin levels
  Added increase_gold and increase_bank functions to prevent cash overflows